<resources>
    <string name="app_name" translatable="false">Flow Wallet</string>
    <string name="next">Next</string>
    <string name="list">List</string>
    <string name="view_as">View as</string>
    <string name="creating_account">Creating Your Account…</string>
    <string name="secure_design">Secure by Design</string>
    <string name="secure_design_2">Using Device Keys with Hardware-Grade Security, Flow Wallet is an ultra-secure hardware wallet you can trust</string>
    <string name="username">Username</string>
    <string name="username_too_short">Too short</string>
    <string name="username_too_long">Too long</string>
    <string name="username_exist">It’s taken</string>
    <string name="username_success">Sounds good</string>
    <string name="register_error">Register error</string>
    <string name="confirm">Confirm</string>
    <string name="almost_there">Almost there</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Please enter your password again</string>
    <string name="password_check">I understand Flow Wallet can not recover this password .</string>
    <string name="cloud_password_tip">Flow Wallet uses this password to encrypt your backup.</string>
    <string name="password">Password</string>
    <string name="password_verify_format">Enter at least 8 characters</string>
    <string name="create">Create</string>
    <string name="backing_up">Backing up</string>
    <string name="backup_error">Backup error</string>
    <string name="backup">Backup</string>
    <string name="double_str">Double</string>
    <string name="secure">Secure</string>
    <string name="manual_backup_tip">Unlock with PIN Code and Biometrics to allow extra wallet security.</string>
    <string name="pick_your">Pick Your</string>
    <string name="add_extra">Add Extra</string>
    <string name="protection">Protection</string>
    <string name="to_your_wallet">To Your Wallet</string>
    <string name="pin_code">PIN Code</string>
    <string name="grid">Grid</string>
    <string name="create_pin">Create a PIN</string>
    <string name="pin">PIN</string>
    <string name="check_pin">Please type\nyour PIN again</string>
    <string name="reset_pin">Please type\nyour new PIN</string>
    <string name="reset_check_pin">Please type\nyour new PIN again</string>
    <string name="check_pin_tip">Please make sure you can remember your PIN.</string>
    <string name="create_pin_tip">So no one else but you can unlock your wallet.</string>
    <string name="backup_pin_tip">Your PIN code will be used to securely encrypt your account backup</string>
    <string name="mnemonic_question_title">Select the word %1$s</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Settings</string>
    <string name="things_you">Things You \nNeed to Know</string>
    <string name="surge_pricing_title">Are you really sure that you want to continue with surge pricing?</string>
    <string name="surge_current_fee">Your transaction fee:</string>
    <string name="surge_active">Surge price active</string>
    <string name="surge_description">Due to high network activity, transaction fees are elevated, and Flow Wallet is temporarily not paying for your gas. Current network fees are 4× higher than usual.</string>
    <string name="surge_hold_to_confirm">Hold to agree to surge pricing</string>
    <string name="wallet_create_warning_tip">In the next step, you will see a secret phrase (12 words). The secret phrase is the only key to recover your wallet.</string>
    <string name="create_wallet_warning1">If I lose my secret phrases, I cannot access my account forever.</string>
    <string name="create_wallet_warning2">If I expose my secret phrases anywhere, my funds can be stolen.</string>
    <string name="create_wallet_warning3">It is my full responsibility to secure my secret phrases.</string>
    <string name="backup_manually">Backup Manually</string>
    <string name="backup_to_google_drive">Backup to google drive</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="recovery_phrase_note">Write down these words in the right order and store them somewhere safe.</string>
    <string name="recovery">Recovery</string>
    <string name="phrase">Phrase</string>
    <string name="nft">NFTs</string>
    <string name="nft_detail">NFT Detail</string>
    <string name="activity">Activity</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_tip">Restore your wallet with the 12 word recovery phrase that you have written down.</string>
    <string name="choose_account">Choose Account</string>
    <string name="multiple_accounts_found">Multiple Accounts found.</string>
    <string name="enter_password">Enter Password</string>
    <string name="continue_str">Continue</string>
    <string name="restore_with_google_drive">Restore with Google Drive</string>
    <string name="wrong_password">wrong password</string>
    <string name="word_not_found">Oops, word not found.</string>
    <string name="restore_mnemonic_tip">This is a 12 word phrase you were given when you created your previous wallet.</string>
    <string name="multi_restore_mnemonic_tip">This is a 15 word phrase you were given when you
        created your previous wallet.</string>
    <string name="restore_with_mnemonic">Sign in with \nRecovery Phrase</string>
    <string name="restore_mnemonic_hint">Enter the Recovery Phrase</string>
    <string name="account_not_found">Account not Found</string>
    <string name="account_not_found_desc">No account found with the recovery phrase. Do you want to create a new account with your phrase?</string>
    <string name="your_phrase">your phrase</string>
    <string name="create_wallet">Create a new account</string>
    <string name="cancel">Cancel</string>
    <string name="username_format_wrong">"Your username can only contain letters and numbers"</string>
    <string name="encrypt_backup">Encrypt Backup</string>
    <string name="done">Done</string>
    <string name="biometrics">Biometrics</string>
    <string name="information">Information</string>
    <string name="i_accept">I Accept</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="top_selection">Top Selection</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="coins">Coins</string>
    <string name="collections">Collections</string>
    <string name="collections_count">%1$d Collections</string>
    <string name="collectibles_count">%1$d Collectibles</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="saved_to_album">Saved to album</string>
    <string name="view_on_web">View on web</string>
    <string name="nft_collections">NFT Collections</string>
    <string name="empty_title">Your collection is waiting to shine!</string>
    <string name="empty_title_2">Start exploring and add your first NFTs today.</string>
    <string name="receive">Receive</string>
    <string name="buy">Buy</string>
    <string name="swap">Swap</string>
    <string name="address">Address</string>
    <string name="device">Device</string>
    <string name="chrome_extension">Chrome Extension</string>
    <string name="about">About</string>
    <string name="sync_title">Sync Flow Wallet</string>
    <string name="switch_account">Switch Account</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="edit">Edit</string>
    <string name="settings_visible_desc">Other Flow Wallet users cannot search for your username .</string>
    <string name="security_setting">Security Settings</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="currency_setting">Currency Settings</string>
    <string name="theme_setting">Theme Settings</string>
    <string name="about_setting">About Settings</string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="private_str">Private</string>
    <string name="reset_pin_code">Reset PIN Code</string>
    <string name="private_key">Private Key</string>
    <string name="verify_pin_code">Verify PIN Code</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="verify_pin_tip">So we will secure your backup with PIN code.</string>
    <string name="enter_verify_pin_tip">Please enter the PIN when you create this backup.</string>
    <string name="enter_current_pin_code">Please enter current PIN code</string>
    <string name="do_not_share_secret">Do not share your secret phrase!</string>
    <string name="do_not_share_secret_desc">If someone has your secret phrase, they will have full control of your wallet.</string>
    <string name="security">Security</string>
    <string name="manually">Manually</string>
    <string name="sync">Sync</string>
    <string name="delete">Delete</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="please_enter_a_nickname">Please enter a nickname</string>
    <string name="save">Save</string>
    <string name="address_book">Address Book</string>
    <string name="search">Search</string>
    <string name="address_add_name_tip">Please enter a name</string>
    <string name="address_add_address_tip">Please enter address</string>
    <string name="name">Name</string>
    <string name="add_address">Add address</string>
    <string name="checking">Checking</string>
    <string name="address_check_format_error">Invalid address</string>
    <string name="address_check_chain_error">Can\'t find address in chain</string>
    <string name="address_check_success">Validated address</string>
    <string name="address_search_empty_tip">No results. Please check your input and try again.</string>
    <string name="light">Light</string>
    <string name="off">Off</string>
    <string name="restore_with_recovery_phrase">Restore with Recovery Phrase</string>
    <string name="enable">Enable</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="currency">Currency</string>
    <string name="not_now_tip">Not now</string>
    <string name="multi_backup_tip">Please Select 2 or More Backup Options</string>
    <string name="multi_restore_title">From Multi-Backup</string>
    <string name="multi_restore_note">Please Select 2 or More Backup Options</string>
    <string name="google_drive">Google Drive</string>
    <string name="wrong_network">Switch Network</string>
    <string name="backup_on_mainnet">You can only create backup on Mainnet.</string>
    <string name="switch_to_mainnet">Switch to Mainnet</string>
    <string name="learn_more">Learn more</string>
    <string name="enable_evm_desc">Manage multi-VM assets seamlessly.</string>
    <string name="enable_evm_title_enable_the_path">Enable the path</string>
    <string name="enable_evm_title_to_evm">to EVM on Flow</string>
    <string name="notification">Notification</string>
    <string name="appearance">Appearance</string>
    <string name="what_is_multi_backup">What is Multi-Backup?</string>
    <string name="backup_start_about_tip">Multi-backup is where Flow Wallet creates multiple partial-weight keys (500 weight) and stores them across your desired platforms, iCloud, Google Drive or Seed Phrase</string>
    <string name="raw_key_restore_google_drive_note">Import your legacy backup from Google Drive.</string>
    <string name="dropbox">Dropbox</string>
</resources>