<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/group2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp"
    android:layout_marginHorizontal="2dp"
    app:layout_constraintTop_toBottomOf="@id/group1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_settings">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.flowfoundation.wallet.page.profile.widget.ProfilePreference
                android:id="@+id/currency_preference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:desc="USD"
                app:icon="@drawable/ic_settings_currency"
                app:titleId="@string/currency" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/profile_card_divider" />

            <com.flowfoundation.wallet.page.profile.widget.ProfilePreference
                android:id="@+id/theme_preference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descId="@string/light"
                app:icon="@drawable/ic_settings_theme"
                app:titleId="@string/appearance" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/profile_card_divider" />

            <com.flowfoundation.wallet.page.profile.widget.ProfilePreference
                android:id="@+id/notification_preference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descId="@string/off"
                app:icon="@drawable/ic_settings_notification"
                app:titleId="@string/notification" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>