<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_backup_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_1">

    <TextView
        android:id="@+id/tv_multi_backup_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:gravity="center_horizontal"
        android:text="@string/multi_backup_tip"
        android:textColor="@color/accent_gray"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.flowfoundation.wallet.page.backup.multibackup.view.BackupOptionItem
        android:id="@+id/oi_google_drive"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_multi_backup_tip"
        app:option_item_icon="@drawable/ic_backup_google_drive"
        app:option_item_name="@string/google_drive"/>

    <com.flowfoundation.wallet.page.backup.multibackup.view.BackupOptionItem
        android:id="@+id/oi_recovery_phrase"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oi_google_drive"
        app:option_item_icon="@drawable/ic_backup_recovery_phrase"
        app:option_item_name="@string/recovery_phrase"/>

    <com.flowfoundation.wallet.page.backup.multibackup.view.BackupOptionItem
        android:id="@+id/oi_dropbox"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oi_recovery_phrase"
        app:option_item_icon="@drawable/ic_backup_dropbox"
        app:option_item_name="@string/dropbox"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:paddingHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@id/oi_dropbox">

        <TextView
            android:id="@+id/tv_about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.1"
            android:textStyle="bold"
            android:text="@string/what_is_multi_backup"
            android:textColor="@color/accent_gray"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_about_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/backup_start_about_tip"
            android:textColor="@color/accent_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_about_title"/>

        <TextView
            android:id="@+id/tv_learn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.1"
            android:textStyle="bold"
            android:text="@string/learn_more"
            android:textColor="@color/navy_wallet"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_about_tip"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.flowfoundation.wallet.widgets.LoadingMaterialButton
        android:id="@+id/btn_next"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/wallet_create_button_margin"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>