<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="14dp">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/wrong_network"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/desc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/backup_on_mainnet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/switch_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginTop="27dp"
        android:text="@string/switch_to_mainnet"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/desc_view"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:backgroundTint="@color/background"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textColor="@color/text"
        app:cornerRadius="12dp"
        app:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/switch_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>