<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/deep_bg">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        app:layout_constraintDimensionRatio="1:1.07"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_evm_logo_with_circle"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        android:text="@string/not_now_tip"
        android:textColor="@color/text_1"
        android:background="@drawable/bg_round_24dp"
        android:backgroundTint="@color/bg_skip"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montsettat"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:textColor="@color/text_2"
        android:lineSpacingMultiplier="1.1"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/enable_evm_title_enable_the_path"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <TextView
        android:id="@+id/tv_title_evm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montsettat"
        android:textSize="30sp"
        android:textColor="@color/text_2"
        android:lineSpacingMultiplier="1.1"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/enable_evm_title_to_evm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/inter"
        android:textColor="@color/text_2"
        android:text="@string/enable_evm_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_title_evm"/>

    <com.flowfoundation.wallet.widgets.LoadingMaterialButton
        android:id="@+id/btn_enable"
        style="@style/Button"
        android:layout_width="115dp"
        android:layout_marginHorizontal="@dimen/activity_padding"
        android:layout_marginBottom="4dp"
        android:text="@string/enable"
        android:backgroundTint="@color/accent_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_more"/>
    
    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingVertical="5dp"
        android:textSize="16sp"
        android:textColor="@color/text_1"
        android:fontFamily="@font/inter"
        android:text="@string/learn_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>